fix compare overflow and color inconsistencies on build header

--- a/app/styles/app/_mixins/vars.sass
+++ b/app/styles/app/_mixins/vars.sass
@@ -60,6 +60,9 @@ $log-header-bg: #444444
 
 // new build header
 $font-size-xxl: 30px
-$grey: #A6ADAD
+$grey1: #A5ACAD
+$grey2: #969496
+$grey3: #808080
+$grey: $grey1
 $cream-light: #FAFAF8
 $cream-dark: lighten(mix(#F7F7F4, $grey), 10)
